fixed the overflow for usernames in search result

--- a/public/stylesheets/sass/style.sass
+++ b/public/stylesheets/sass/style.sass
@@ -2556,6 +2556,7 @@ html body #main.sessions
       text-overflow: ellipsis
       width: 110px
       height: 25px
+      white-space: nowrap
     .following-button
       margin: 10px
       span
